{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 83,
  "lineage": "a4020450-fa6e-9f37-5cae-6bc104e703cb",
  "resources": [
    {
      "module": "module.nasuni_appliances[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_virtual_network",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].default"
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.239.10.0/29",
            "address_prefixes": [
              "10.239.10.0/29"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/virtualNetworks/PGR-Nasuni-Network-pd-scus-vnet/subnets/PGR-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet",
            "name": "PGR-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet",
            "network_security_group_id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGR-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "PGR-Nasuni-Network-pd-scus-rg",
            "virtual_network_name": "PGR-Nasuni-Network-pd-scus-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/PGRSCUTNUNIVP01-PD-nic",
            "internal_domain_name_suffix": "ig02ilufiqaunddw3xe43z4nhg.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.239.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/virtualNetworks/PGR-Nasuni-Network-pd-scus-vnet/subnets/PGR-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "7C-1E-52-10-84-03",
            "name": "PGRSCUTNUNIVP01-PD-nic",
            "private_ip_address": "10.239.10.4",
            "private_ip_addresses": [
              "10.239.10.4"
            ],
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "virtual_machine_id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Compute/virtualMachines/PGRSCUTNUNIVP01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/PGRSCUTNUNIVP01-PD-nic|/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg",
            "network_interface_id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/PGRSCUTNUNIVP01-PD-nic",
            "network_security_group_id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_interface.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg",
            "location": "southcentralus",
            "name": "PGRSCUTNUNIVP01-PD-nsg",
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2049",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NFS",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SMB",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NasuniConsole",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg/securityRules/HTTPS",
            "name": "HTTPS",
            "network_security_group_name": "PGRSCUTNUNIVP01-PD-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg/securityRules/NasuniConsole",
            "name": "NasuniConsole",
            "network_security_group_name": "PGRSCUTNUNIVP01-PD-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg/securityRules/SMB",
            "name": "SMB",
            "network_security_group_name": "PGRSCUTNUNIVP01-PD-nsg",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2049",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c7a18a12-7088-4955-8504-5156e8f48fdd/resourceGroups/PGR-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/PGRSCUTNUNIVP01-PD-nsg/securityRules/NFS",
            "name": "NFS",
            "network_security_group_name": "PGRSCUTNUNIVP01-PD-nsg",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "PGR-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_pgr.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_pgr.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1"
    },
    {
      "module": "module.nasuni_appliances_pgr[\"PGRSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub1"
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.239.10.16/29",
            "address_prefixes": [
              "10.239.10.16/29"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/virtualNetworks/QIS-Nasuni-Network-pd-scus-vnet/subnets/QIS-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet",
            "name": "QIS-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet",
            "network_security_group_id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QIS-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "QIS-Nasuni-Network-pd-scus-rg",
            "virtual_network_name": "QIS-Nasuni-Network-pd-scus-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/QISSCUTNUNIVP01-PD-nic",
            "internal_domain_name_suffix": "1hw0235plgpupimqwv1suo5rod.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.239.10.20",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-Network-pd-scus-rg/providers/Microsoft.Network/virtualNetworks/QIS-Nasuni-Network-pd-scus-vnet/subnets/QIS-Nasuni-Network-pd-scus-vnet-virtualmachine-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "60-45-BD-F7-2E-9C",
            "name": "QISSCUTNUNIVP01-PD-nic",
            "private_ip_address": "10.239.10.20",
            "private_ip_addresses": [
              "10.239.10.20"
            ],
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "virtual_machine_id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Compute/virtualMachines/QISSCUTNUNIVP01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/QISSCUTNUNIVP01-PD-nic|/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg",
            "network_interface_id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkInterfaces/QISSCUTNUNIVP01-PD-nic",
            "network_security_group_id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_interface.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg",
            "location": "southcentralus",
            "name": "QISSCUTNUNIVP01-PD-nsg",
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2049",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NFS",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SMB",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NasuniConsole",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg/securityRules/HTTPS",
            "name": "HTTPS",
            "network_security_group_name": "QISSCUTNUNIVP01-PD-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg/securityRules/NasuniConsole",
            "name": "NasuniConsole",
            "network_security_group_name": "QISSCUTNUNIVP01-PD-nsg",
            "priority": 1003,
            "protocol": "Tcp",
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "445",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg/securityRules/SMB",
            "name": "SMB",
            "network_security_group_name": "QISSCUTNUNIVP01-PD-nsg",
            "priority": 1004,
            "protocol": "Tcp",
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2049",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6b025554-fc3d-49a6-a9a1-56d397909042/resourceGroups/QIS-Nasuni-pd-scus-rg/providers/Microsoft.Network/networkSecurityGroups/QISSCUTNUNIVP01-PD-nsg/securityRules/NFS",
            "name": "NFS",
            "network_security_group_name": "QISSCUTNUNIVP01-PD-nsg",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "QIS-Nasuni-pd-scus-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qis.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qis.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2"
    },
    {
      "module": "module.nasuni_appliances_qis[\"QISSCUTNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub2"
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.239.138.0/29",
            "address_prefixes": [
              "10.239.138.0/29"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-cace-rg/providers/Microsoft.Network/virtualNetworks/QTI-Nasuni-Network-pd-cace-vnet/subnets/QTI-Nasuni-Network-pd-cace-vnet-virtualmachine-subnet",
            "name": "QTI-Nasuni-Network-pd-cace-vnet-virtualmachine-subnet",
            "network_security_group_id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-cace-rg/providers/Microsoft.Network/networkSecurityGroups/QTI-Nasuni-Network-pd-cace-vnet-virtualmachine-subnet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "QTI-Nasuni-Network-pd-cace-rg",
            "virtual_network_name": "QTI-Nasuni-Network-pd-cace-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-cace-rg/providers/Microsoft.Network/networkInterfaces/QTICCETNUNIVP01-PD-nic",
            "internal_domain_name_suffix": "fkf54zngpygebj32dlzdvhm1qb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.239.138.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-cace-rg/providers/Microsoft.Network/virtualNetworks/QTI-Nasuni-Network-pd-cace-vnet/subnets/QTI-Nasuni-Network-pd-cace-vnet-virtualmachine-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "canadacentral",
            "mac_address": "7C-ED-8D-66-7B-80",
            "name": "QTICCETNUNIVP01-PD-nic",
            "private_ip_address": "10.239.138.4",
            "private_ip_addresses": [
              "10.239.138.4"
            ],
            "resource_group_name": "QTI-Nasuni-pd-cace-rg",
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "virtual_machine_id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-cace-rg/providers/Microsoft.Compute/virtualMachines/QTICCETNUNIVP01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qti.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-cace-rg/providers/Microsoft.Network/networkSecurityGroups/QTICCETNUNIVP01-PD-nsg",
            "location": "canadacentral",
            "name": "QTICCETNUNIVP01-PD-nsg",
            "resource_group_name": "QTI-Nasuni-pd-cace-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2049",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NFS",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SMB",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NasuniConsole",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3"
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTICCETNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3"
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.237.10.0/29",
            "address_prefixes": [
              "10.237.10.0/29"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-eus1-rg/providers/Microsoft.Network/virtualNetworks/QTI-Nasuni-Network-pd-eus1-vnet/subnets/QTI-Nasuni-Network-pd-eus1-vnet-virtualmachine-subnet",
            "name": "QTI-Nasuni-Network-pd-eus1-vnet-virtualmachine-subnet",
            "network_security_group_id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-eus1-rg/providers/Microsoft.Network/networkSecurityGroups/QTI-Nasuni-Network-pd-eus1-vnet-virtualmachine-subnet-nsg",
            "private_endpoint_network_policies": "Disabled",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "QTI-Nasuni-Network-pd-eus1-rg",
            "virtual_network_name": "QTI-Nasuni-Network-pd-eus1-vnet"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-eus1-rg/providers/Microsoft.Network/networkInterfaces/QTIEU2TNUNIVP01-PD-nic",
            "internal_domain_name_suffix": "24sysdualpgubloq1wvkrxjukd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.237.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-Network-pd-eus1-rg/providers/Microsoft.Network/virtualNetworks/QTI-Nasuni-Network-pd-eus1-vnet/subnets/QTI-Nasuni-Network-pd-eus1-vnet-virtualmachine-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "QTIEU2TNUNIVP01-PD-nic",
            "private_ip_address": "10.237.10.4",
            "private_ip_addresses": [
              "10.237.10.4"
            ],
            "resource_group_name": "QTI-Nasuni-pd-eus1-rg",
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qti.module.azure_nasuni.azurerm_subnet.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.azurerm_virtual_network.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_subnet.existing",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-eus1-rg/providers/Microsoft.Network/networkSecurityGroups/QTIEU2TNUNIVP01-PD-nsg",
            "location": "eastus",
            "name": "QTIEU2TNUNIVP01-PD-nsg",
            "resource_group_name": "QTI-Nasuni-pd-eus1-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "2049",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NFS",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "445",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SMB",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NasuniConsole",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Service": "Nasuni",
              "critical-infrastructure": "Yes",
              "environment": "PD",
              "external-facing": "No",
              "owner": "cwilliford@quantaservices.com",
              "project-name": "Nasuni",
              "regulatory-data": "Yes"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3",
      "instances": [
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "2049",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8f054358-9640-4873-a3bf-f1e3547ed39f/resourceGroups/QTI-Nasuni-pd-eus1-rg/providers/Microsoft.Network/networkSecurityGroups/QTIEU2TNUNIVP01-PD-nsg/securityRules/NFS",
            "name": "NFS",
            "network_security_group_name": "QTIEU2TNUNIVP01-PD-nsg",
            "priority": 1005,
            "protocol": "Tcp",
            "resource_group_name": "QTI-Nasuni-pd-eus1-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nasuni_appliances_qti.module.azure_nasuni.azurerm_network_security_group.nasuni",
            "module.nasuni_appliances_qti.module.azure_nasuni.data.azurerm_resource_group.nasuni",
            "null_resource.accept_marketplace_terms"
          ]
        }
      ]
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3"
    },
    {
      "module": "module.nasuni_appliances_qti[\"QTIEU2TNUNIVP01\"].module.azure_nasuni",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nasuni",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub3"
    }
  ]
}